--- a/home.css
+++ b/home.css
@@ -3,12 +3,20 @@ header{background:skyblue; width:100%; float:left;}
 #home{float:left; width:100%; text-align:center; color:white; font-size:4em}
 #tag{float:right; color:white; font-size:1.5em; margin:5px 15px 0px 0px}
 header ul{float:left; width:100%; margin:30px 0px}
-.list{float:left; width:25%; font-size:2em; color:white;text-align:center}
+.list{float:left; width:20%; font-size:2em; color:white;text-align:center}
 .list a{color:white}
 
 
-#content{width:100%; padding:15% 0px}
-.section{text-align:center}
+#content{width:100%;float:left;display="inline-block";text-align:center}
+#consection{width:100%;margin:15% 0 10% 0}
+#consection p{position:relative;top:20px}
+#consection ul{position:relative;top:30px;}
+.section{margin:30px 0px}
+
+footer{width:100%;float:left;border-top:1px solid skyblue;background:antiquewhite}
+#ref{float:left}
+
+footer #hp{text-align:right;width:100%;float:right;margin-top:10px}
 
 
 @media screen and (max-width:700px){
@@ -23,4 +31,9 @@ header ul{float:left; width:100%; margin:30px 0px}
 
 @media screen and (max-width:450px){
 #tag{font-size:1.1em; margin-top:9px}
+}
+
+
+@media screen and (min-width:1000px){
+body{font-size:20px}
 }
