--- a/home.css
+++ b/home.css
@@ -8,11 +8,11 @@ header ul{float:left; width:100%; margin:30px 0px}
 
 
 #content{width:100%;float:left;display="inline-block";text-align:center}
-#consection{width:100%;margin:15% 0 10% 0}
+#consection{width:100%;margin:15% 0 13% 0}
 #consection p{position:relative;top:20px}
 #consection ul{position:relative;top:30px;}
 .section{margin:30px 0px}
-
+.section p{margin-top:10px}
 footer{width:100%;float:left;border-top:1px solid skyblue;background:antiquewhite}
 #ref{float:left}
 
