--- a/home.css
+++ b/home.css
@@ -36,4 +36,5 @@ footer #hp{text-align:right;width:100%;float:right;margin-top:10px}
 
 @media screen and (min-width:1000px){
 body{font-size:20px}
+.section{margin:50px 0px}  
 }
