--- a/home.css
+++ b/home.css
@@ -12,9 +12,9 @@ header ul{float:left; width:100%; margin:30px 0px}
 #consection p{position:relative;top:20px}
 #consection ul{position:relative;top:30px;}
 .section{margin:30px 0px}
-.section p{margin-top:15px}
+.section p{margin-top:20px}
 
-#bgimg{width:100%;background:url('https://c11.kr/2r7j');background-size:cover}
+#bgimg{width:100%;}
 
 footer{width:100%;float:left;border-top:1px solid skyblue;background:antiquewhite}
 #ref{float:left}
