--- a/home.css
+++ b/home.css
@@ -7,7 +7,7 @@ header ul{float:left; width:100%; margin:30px 0px}
 .list a{color:white}
 
 
-#content{width:100%;float:left;display="inline-block";text-align:center}
+#content{width:100%;float:left;display="inline-block";text-align:center;line-height:200%}
 #consection{width:100%;margin:15% 0 13% 0}
 #consection p{position:relative;top:20px}
 #consection ul{position:relative;top:30px;}
