--- a/home.css
+++ b/home.css
@@ -14,12 +14,14 @@ header ul{float:left; width:100%; margin:30px 0px}
 .section{margin:30px 0px}
 .section p{margin-top:20px}
 
+table{margin:20px 0px;}
+
 #bgimg{width:100%;}
 
 footer{width:100%;float:left;border-top:1px solid skyblue;background:antiquewhite}
 #ref{float:left}
 
-footer #hp{text-align:right;width:100%;float:right;margin-top:10px}
+footer #hp{text-align:right;width:100%;float:right;margin:20px 0px;}
 
 
 @media screen and (max-width:700px){
