--- a/home.css
+++ b/home.css
@@ -14,14 +14,14 @@ header ul{float:left; width:100%; margin:30px 0px}
 .section{margin:30px 0px}
 .section p{margin-top:20px}
 
-table{margin:20px 0px;}
+table{margin:20px 0px;align:center;}
 
 #bgimg{width:100%;}
 
 footer{width:100%;float:left;border-top:1px solid skyblue;background:antiquewhite}
-#ref{float:left}
+#ref{float:left;margin-top:15px}
 
-footer #hp{text-align:right;width:100%;float:right;margin:20px 0px;}
+footer #hp{text-align:right;width:100%;float:right;margin:20px 0px 15px 0px;}
 
 
 @media screen and (max-width:700px){
