--- a/home.css
+++ b/home.css
@@ -19,9 +19,9 @@ table{margin:20px 0px;align:center;}
 #bgimg{width:100%;}
 
 footer{width:100%;float:left;border-top:1px solid skyblue;background:antiquewhite}
-#ref{float:left;margin-top:15px}
+#ref{float:left;margin:15px 0px 0px 30px}
 
-footer #hp{text-align:right;width:100%;float:right;margin:20px 0px 15px 0px;}
+footer #hp{text-align:right;width:100%;float:right;margin:20px 40px 15px 0px;}
 
 
 @media screen and (max-width:700px){
