--- a/home.css
+++ b/home.css
@@ -14,12 +14,12 @@ header ul{float:left; width:100%; margin:30px 0px}
 .section{margin:30px 0px}
 .section p{margin-top:20px}
 
-table{margin:20px 0px;align:center;}
+table{margin:20px 0px;align:center;width:100%}
 
 #bgimg{width:100%;}
 
 footer{width:100%;float:left;border-top:1px solid skyblue;background:antiquewhite}
-#ref{float:left;margin:13px 0px 0px 15px}
+#ref{float:left;margin:13px 0px 0px 12px}
 
 footer #hp{text-align:right;width:100%;float:right;margin:20px 20px 15px 0px;}
 
