--- a/home.css
+++ b/home.css
@@ -8,14 +8,14 @@ header ul{float:left; width:100%; margin:30px 0px}
 
 
 #content{width:100%;float:left;display="inline-block";text-align:center;line-height:200%}
-#content p{width:90%}
+#content p{width:90%;text-align:center}
 #consection{width:100%;margin:15% 0 13% 0}
 #consection p{position:relative;top:20px}
 #consection ul{position:relative;top:30px;}
 .section{margin:30px 0px}
 .section p{margin-top:20px}
 
-table{margin:20px 0px;float:auto;width:80%}
+table{margin:auto;width:80%}
 
 #bgimg{width:100%;}
 
