--- a/home.css
+++ b/home.css
@@ -11,10 +11,10 @@ header ul{float:left; width:100%; margin:30px 0px}
 #consection{width:100%;margin:15% 0 13% 0}
 #consection p{position:relative;top:20px}
 #consection ul{position:relative;top:30px;}
-.section{margin:50px 0px}
+.section{margin:70px 0px}
 .section p{margin-top:20px}
 
-table{margin: auto;width:80%}
+table{margin:25px auto;width:80%}
 
 #bgimg{width:100%;}
 
@@ -37,6 +37,7 @@ footer #hp{text-align:right;width:100%;float:right;margin:20px 20px 15px 0px;}
 @media screen and (max-width:450px){
 #tag{font-size:1.1em; margin-top:10px}
   #content{font-size:13px}  
+  #consection{margin:20% 0}
 }
 
 
